# lesscorrect

./: .gitignore  MY OWN CORRECTLESS PLAN_FINAL_v2.md  README.md  pyproject.toml
.claude/skills/_shared/: constraints.md
.claude/skills/cdocs/: SKILL.md
.claude/skills/cquick/: SKILL.md
.claude/skills/creview/: SKILL.md
.claude/skills/cspec/: SKILL.md
.claude/skills/ctdd/: SKILL.md
.claude/skills/cverify/: SKILL.md
.claude/skills/skill-creator/: SKILL.md  reference.md
.github/workflows/: ci.yml
folder test/: cli.py  knowledge.py  orchestrator.py  pyproject.toml
src/correctless/: README.md  __init__.py  agents.py  config.py  intensity.py  orchestrator.py  workflow.py
tests/: test_config.py  test_intensity.py  test_knowledge.py  test_workflow.py
