[project]
name = "correctless"
version = "4.0.0"
description = "Correctness-oriented development workflow — spec before code, test before impl, nobody grades their own work."
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [{ name = "Ben" }]
dependencies = [
    "claude-agent-sdk>=0.1.0",
    "anthropic>=0.52.0",
    "click>=8.1",
    "rich>=13.0",
    "pydantic>=2.0",
]

[project.scripts]
correctless = "correctless.cli:main"
cl = "correctless.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/correctless"]
